# ConfigWithBoost

./: README.md  config.ini
src/: CMakeLists.txt  main.cpp
src/ConfigParser/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp
src/Consumer/: CMakeLists.txt  Consumer.cpp  Consumer.hpp
